<resources>
    <string name="app_name">Little Gardener</string>
    <string name="facebook_app_id">791284305499554</string>
    <string name="fb_login_protocol_scheme">fb791284305499554</string>
    <string name="facebook_client_token">ecd50350068ddb66bda98fbc492a9dac</string>
    <string name="firebase_storage_url">https://firebasestorage.googleapis.com/v0/b/little-gardener-c22ec.appspot.com/</string>
    <string name="time_zone">+08:00</string>
    <string-array name="order_filter">
        <item>Pending</item>
        <item>Preparing</item>
        <item>Ready For Pickup</item>
        <item>Completed</item>
        <item>Cancelled</item>
    </string-array>
    <string name="title_activity_full_screen_image">FullScreenImageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_product">Add Product</string>
    <string name="update_product">Update Product</string>
    <string name="filter_orders">Filter Orders</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="product_images">Product Images</string>
    <string name="_0_00">0.00</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="add_image_icon">add_image_icon</string>
    <string name="manage_customer_orders_all">Manage Customer Orders (All)</string>
    <string name="manage_customer_orders_self">Manage Customer Orders (Self)</string>
    <string name="delete_product_listing">Delete Product Listing</string>
    <string name="edit_product_listing">Edit Product Listing</string>
    <string name="create_product_listing">Create Product Listing</string>
    <string name="checkout">Checkout</string>
    <string name="total_price">Total Price:</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="reenter_new_password">Reenter New Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="header_image">header_image</string>
    <string name="cart">Cart</string>
    <string name="chat">Chat</string>
    <string name="background_image">background_image</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="submit">Submit</string>
    <string name="search">🔍 Search</string>
    <string name="app_logo">app_logo</string>
    <string name="app_name_newline">Little\nGardener</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="register_here">Register Here</string>
    <string name="notification">Notification</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="reconfirm_your_password">Reconfirm your password</string>
    <string name="user">User</string>
    <string name="view_orders">View Orders</string>
    <string name="log_out">Log Out</string>
    <string name="user_icon">user_icon</string>
    <string name="unread_indicator">unread_indicator</string>
    <string name="cart_icon">cart_icon</string>
    <string name="placeholder_image">placeholder_image</string>
    <string name="product_categories">Product Categories</string>
    <string name="price_title">Price:</string>
    <string name="category_title">Category:</string>
</resources>