<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/order_options">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                        <com.smarteist.autoimageslider.SliderView
                            android:id="@+id/slider"
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:layout_centerInParent="true"
                            app:sliderAnimationDuration="600"
                            app:sliderAutoCycleDirection="back_and_forth"
                            app:sliderIndicatorAnimationDuration="600"
                            app:sliderIndicatorEnabled="true"
                            app:sliderIndicatorGravity="center_horizontal|bottom"
                            app:sliderIndicatorMargin="15dp"
                            app:sliderIndicatorOrientation="horizontal"
                            app:sliderIndicatorPadding="3dp"
                            app:sliderIndicatorRadius="2dp"
                            app:sliderIndicatorSelectedColor="@color/darker_gray"
                            app:sliderIndicatorUnselectedColor="@color/gray"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <TextView
                            android:id="@+id/product_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginHorizontal="8dp"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            app:layout_constraintTop_toBottomOf="@id/slider"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <TextView
                            android:id="@+id/product_price_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginHorizontal="8dp"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:text="@string/price_title"
                            android:textStyle="bold"
                            app:layout_constraintTop_toBottomOf="@id/product_title"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/product_price"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textColor="@color/navy_blue"
                            app:layout_constraintTop_toTopOf="@id/product_price_title"
                            app:layout_constraintBottom_toBottomOf="@id/product_price_title"
                            app:layout_constraintStart_toEndOf="@id/product_price_title"/>

                        <TextView
                            android:id="@+id/product_category_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category_title"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_marginTop="8dp"
                            android:layout_marginHorizontal="8dp"
                            app:layout_constraintTop_toBottomOf="@id/product_price_title"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/product_category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            app:layout_constraintStart_toEndOf="@id/product_category_title"
                            app:layout_constraintTop_toTopOf="@id/product_category_title"
                            app:layout_constraintBottom_toBottomOf="@id/product_category_title"/>

                        <TextView
                            android:id="@+id/product_description_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textSize="16sp"
                            android:layout_marginTop="8dp"
                            android:layout_marginHorizontal="8dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            app:layout_constraintTop_toBottomOf="@id/product_category_title"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/product_description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:layout_marginTop="8dp"
                            android:layout_marginHorizontal="8dp"
                            android:textColor="@color/black"
                            app:layout_constraintTop_toBottomOf="@id/product_description_title"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/order_options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:labelVisibilityMode="labeled"
            app:itemIconTint="@color/black"
            app:itemTextColor="@color/black"
            app:menu="@menu/product_options"/>

</androidx.constraintlayout.widget.ConstraintLayout>
